--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.105"
 
 anyhow = "1.0.95"
+
+proof-forge-core = { path = "crates/core" }
