--- a/crates/input-snarkjs/Cargo.toml
+++ b/crates/input-snarkjs/Cargo.toml
@@ -7,3 +7,5 @@ edition.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+
+proof-forge-core = { workspace = true }
