--- a/crates/input-snarkjs/Cargo.toml
+++ b/crates/input-snarkjs/Cargo.toml
@@ -8,4 +8,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
 
+alloy-primitives = { workspace = true }
+
 proof-forge-core = { workspace = true }
