add output solidity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["crates/core", "crates/input-snarkjs", "forgeproof"]
+members = ["crates/core", "crates/input-snarkjs", "crates/output-solidity", "forgeproof"]
 
 [workspace.package]
 version = "0.1.0"
