--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -4,5 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-alloy-primitives = { workspace = true }
+alloy-primitives = { workspace = true, features = ["serde"] }
 anyhow = { workspace = true }
+
+serde = { workspace = true }
