update code for export verifier

--- a/crates/output-solidity/Cargo.toml
+++ b/crates/output-solidity/Cargo.toml
@@ -7,3 +7,6 @@ edition.workspace = true
 proof-forge-core = { workspace = true }
 
 anyhow = { workspace = true }
+
+[dev-dependencies]
+serde_json = { workspace = true }
