--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [workspace]
 resolver = "2"
-members = ["crates/core", "crates/input-snarkjs", "crates/output-solidity", "forgeproof"]
+members = [
+    "crates/core",
+    "crates/input-snarkjs",
+    "crates/output-solidity",
+    "forgeproof",
+]
 
 [workspace.package]
 version = "0.1.0"
@@ -15,3 +20,8 @@ serde_json = "1.0.105"
 anyhow = "1.0.95"
 
 proof-forge-core = { path = "crates/core" }
+proof-forge-input-snarkjs = { path = "crates/input-snarkjs" }
+proof-forge-output-solidity = { path = "crates/output-solidity" }
+clap = { version = "4.5.18", features = ["derive"] }
+
+regex = "1.11.1"
