--- a/forgeproof/Cargo.toml
+++ b/forgeproof/Cargo.toml
@@ -12,4 +12,4 @@ hex = { workspace = true }
 
 proof-forge-core = { workspace = true }
 proof-forge-input-snarkjs = { workspace = true }
-proof-forge-output-solidity = { workspace = true }
+proof-forge-output-evm = { workspace = true }
