--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/core",
     "crates/input-snarkjs",
     "crates/output-evm",
+    "crates/output-sui",
     "forgeproof",
 ]
 
@@ -27,3 +28,6 @@ clap = { version = "4.5.18", features = ["derive"] }
 regex = "1.11.1"
 
 hex = "0.4.3"
+
+ark-ff = "0.5.0"
+ark-bn254 = "0.5.0"
