--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -6,7 +6,12 @@ edition.workspace = true
 [dependencies]
 alloy-primitives = { workspace = true, features = ["serde"] }
 anyhow = { workspace = true }
-
 serde = { workspace = true }
-
 regex = { workspace = true }
+
+ark-ff = { workspace = true, optional = true }
+ark-bn254 = { workspace = true, optional = true }
+
+[features]
+default = []
+arkworks = ["ark-bn254", "ark-ff"]
