--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 resolver = "2"
 members = [
     "crates/core",
+    "crates/input-arkworks",
+    "crates/input-gnark",
     "crates/input-snarkjs",
     "crates/output-evm",
     "crates/output-sui",
@@ -32,6 +34,7 @@ regex = "1.11.1"
 hex = "0.4.3"
 
 ark-ff = "0.5.0"
+ark-ec = "0.5.0"
 ark-bn254 = "0.5.0"
 ark-groth16 = "0.5.0"
 ark-serialize = "0.5.0"
