--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,9 +10,10 @@ serde = { workspace = true }
 regex = { workspace = true }
 
 ark-ff = { workspace = true, optional = true }
+ark-ec = { workspace = true, optional = true }
 ark-bn254 = { workspace = true, optional = true }
 ark-groth16 = { workspace = true, optional = true }
 
 [features]
 default = []
-arkworks = ["ark-ff", "ark-bn254", "ark-groth16"]
+arkworks = ["ark-ff", "ark-bn254", "ark-groth16", "ark-ec"]
