--- a/forgeproof/Cargo.toml
+++ b/forgeproof/Cargo.toml
@@ -12,5 +12,9 @@ hex = { workspace = true }
 
 proof-forge-core = { workspace = true }
 proof-forge-input-snarkjs = { workspace = true }
+proof-forge-input-gnark = { workspace = true }
 proof-forge-output-evm = { workspace = true }
 proof-forge-output-sui = { workspace = true }
+
+log = { workspace = true }
+env_logger = { workspace = true }
